--- a/commands.html
+++ b/commands.html
@@ -73,7 +73,7 @@ permalink: /commands
 
 
 
-<script>
+<!-- <script>
     function filterTable(category) {
         var input, filter, table, tr, td, i, textValue, column;
         input = document.getElementById(category + "Input")
@@ -106,6 +106,6 @@ permalink: /commands
             }
         }
     }
-</script>
+</script> -->
 
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
