--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ title: Store
         -}}</button>
     {%- endif -%}
 
-    {%- if eventsForDisplay.size > 0 -%}
+    <!-- {%- if eventsForDisplay.size > 0 -%}
     <button class="tabLinks" onclick="changeTab(event, 'events')">{{- site.data.language.str_events -}}</button>
     {%- endif -%}
 
@@ -55,7 +55,7 @@ title: Store
 
     {%- if kindsForDisplay.size > 0 -%}
     <button class="tabLinks" onclick="changeTab(event, 'kinds')">{{- site.data.language.str_kinds -}}</button>
-    {%- endif -%}
+    {%- endif -%} -->
 </div>
 
 {%- if itemsForDisplay.size > 0 -%}
